namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-datahub-query-metrics-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-datahub-query-metrics-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ask_dpr"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dpr-frontend-alerts-dev"
    cloud-platform.justice.gov.uk/application: "Datahub Query Metrics Extractor"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Reporting: digitalprisonreporting@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-datahub-query-metrics.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-digital-prison-reporting"
